fix: increase transition duration for visibility effects across components

--- a/src/layout/Experience/Experience.css
+++ b/src/layout/Experience/Experience.css
@@ -4,7 +4,7 @@
   border-radius: 0.5rem;
   opacity: 0;
   transform: translate(0, 2.5rem);
-  transition: all 0.7s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
 .experiences.show {
