--- a/src/layout/about/About.css
+++ b/src/layout/about/About.css
@@ -23,7 +23,7 @@
   transform: translate(-2.5rem, 0);
   align-items: center;
   gap: 1rem;
-  transition: all 0.7s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
 .about .about-me.show {
@@ -98,7 +98,7 @@
   min-width: 310px;
   transform: translate(2.5rem, 0);
   opacity: 0;
-  transition: all 0.7s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
 .about .social-links.show {
