--- a/src/layout/skills/Skills.css
+++ b/src/layout/skills/Skills.css
@@ -10,7 +10,7 @@
   border: 1px solid var(--border-light);
   opacity: 0;
   transform: translate(0, 2.5rem);
-  transition: all 0.7s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
 .skills.show {
